added example site exclusion from repo. updated dependancies and error handling